# OOP_mai5

./: CMakeLists.txt  Iaba_5.cpp  README.md  dont_look.txt  lab5.h  laba5.cpp  laba5.h  main.cpp  tests.cpp
